--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -13,6 +13,7 @@ test-paths: ["tests"]
 seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
+packages-install-path: '../dbt_packages'
 
 target-path: "target"  # directory which will store compiled SQL files
 log-path: ../logs
